--- a/electron/package.json
+++ b/electron/package.json
@@ -19,7 +19,9 @@
     "electron-packager": "^8.3.0"
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "electron-json-storage": "^2.1.0",
+    "request": "^2.79.0",
     "ui-select": "^0.19.6"
   }
 }
